Move video to top on mobile: change object-position to center top

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 height: auto;
                 min-height: 100vh;
                 object-fit: contain;
-                object-position: center;
+                object-position: center top;
                 /* Ensure video plays on mobile */
                 -webkit-playsinline: true;
                 playsinline: true;
@@ -62,7 +62,7 @@
                 height: auto;
                 min-height: 100vh;
                 object-fit: contain;
-                object-position: center;
+                object-position: center top;
             }
         }
 
