--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@300;400&family=Source+Sans+Pro:wght@200;300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <script defer src="https://cdn.vercel-insights.com/v1/script.js"></script>
     <style>
         * {
             margin: 0;
