Reduce email gate tile size on mobile for better fit

--- a/index.html
+++ b/index.html
@@ -256,33 +256,13 @@
                 left: 50%;
                 right: auto;
                 transform: translate(-50%, -50%);
-                width: 85%;
-                max-width: 400px;
-                padding: 25px;
+                width: 70%;
+                max-width: 320px;
+                padding: 18px;
             }
 
             .email-gate h2 {
-                font-size: 20px;
-            }
-
-            .email-gate p {
-                font-size: 13px;
-            }
-
-            .email-gate p.subtext {
-                font-size: 11px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .email-gate {
-                width: 90%;
-                max-width: 350px;
-                padding: 22px;
-            }
-
-            .email-gate h2 {
-                font-size: 19px;
+                font-size: 17px;
             }
 
             .email-gate p {
@@ -291,6 +271,46 @@
 
             .email-gate p.subtext {
                 font-size: 10px;
+            }
+
+            .email-gate input[type="email"] {
+                padding: 9px 10px;
+                font-size: 12px;
+            }
+
+            .email-gate button {
+                padding: 9px;
+                font-size: 12px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .email-gate {
+                width: 75%;
+                max-width: 280px;
+                padding: 16px;
+            }
+
+            .email-gate h2 {
+                font-size: 16px;
+            }
+
+            .email-gate p {
+                font-size: 11px;
+            }
+
+            .email-gate p.subtext {
+                font-size: 9px;
+            }
+
+            .email-gate input[type="email"] {
+                padding: 8px 10px;
+                font-size: 11px;
+            }
+
+            .email-gate button {
+                padding: 8px;
+                font-size: 11px;
             }
         }
     </style>
