Update background video to Still Water video on both landing and booking pages

--- a/booking.html
+++ b/booking.html
@@ -178,7 +178,7 @@
 </head>
 <body>
     <video autoplay muted loop playsinline webkit-playsinline>
-        <source src="Copy of Dream Logo 2 (4).mp4" type="video/mp4">
+        <source src="Still_Water_Video_Generation.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
