--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 </head>
 <body>
     <video autoplay muted loop playsinline webkit-playsinline>
-        <source src="Copy of Dream Logo 2 (Meditation).mp4" type="video/mp4">
+        <source src="Still_Water_Video_Generation.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
